2006-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/alpha.m4:  Have the new macro use __alpha as the basis for the
	test.  Checked on Digital Unix 4.0D and Tru64 V5.1

2006-10-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* m4/alpha.m4: New macro GP_ALPHA.  Try to auto-detect if
	compilater targets DEC Alpha/AXP CPU.  If so, add -mieee or -ieee
	flag to CFLAGS to avoid FPU weirdness.

	* configure.in (GP_ALPHA): Call new macro.

2006-10-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS README.1ST src/version.c: Updates.

2006-10-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/borders.dem: Place all 16 plots on one multiplot.

	* demo/all.dem: Put borders.dem inside all.dem.

2006-10-08  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc: Fix gotcha in list of alignment 
	options in 'at <position>' case.

2006-10-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): For backward compatibility, allow
	"set term X" as shorthand for "set term x11".

2006-10-04  Ethan A Merritt  <merritt@u.washington.edu>

	* tutorial/eg7.plt: Make sure no local encoding is in effect, since
	the corresponding TeX package is probably not going to be loaded.

	* term/post.trm (PS_vector): Fix breakage introduced by Bugfix #1542050.
	The path length must not be set to 0 without issuing a stroke command,
	otherwise the current path may never be flushed at all.

2006-10-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graph3d.c (place_arrows3d): Clip arrows even in 3D.  Patch
	from Harald Harders (SF #1569232).

2006-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am: If ./configure has determined that TeX is
	not installed on this machine, do not try to install gnuplot.cfg
	in the TeX directory tree.
	Bug #1569033

2006-10-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: Changed documentation for image to reflect fact